welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:6: error: overloaded method value ecritMessage with alternatives:
  (x$1: Int)Unit <and>
  (x$1: String)Unit
 cannot be applied to ()
    ecritMessage()
    ^ColumnByColumn:8: error: value unary_! is not a member of (Int, Int)
  while(!(7,0))
        ^